--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home_welcome_default">Welcome,</string>
     <string name="apply_for_a_leave">Apply for a leave</string>
+    <string name="monitor_your_progress">Monitor Your Progress</string>
+    <string name="this_month">This Month: </string>
 </resources>
